--- a/index.html
+++ b/index.html
@@ -6,15 +6,43 @@
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>3D Website</title>
+  <style>
+    nav{
+      background-image: url("istockphoto-1035676256-612x612.jpeg");
+     }
+      nav ul{
+        color: white;
+        display: flex;
+        list-style: none;
+        align-items: center;
+        height: 80px;
+        width: 100%;
+    }
+    nav ul li{
+        padding: 0 12px;
+    }
+    
+    nav{
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+  </style>
 </head>
 
 <body>
 
-  <canvas id="bg"></canvas>
+  <nav>
+        <ul>
+            <li><b>Blog Page</b></li>
+            <li>Home</li><br>
+            <li>About</li>
+        </ul>
+  </nav>
+
 
   <main>
 
     <header>
+      
       <h1>Mohamed Ayaan</h1>
       <p>🚀 Welcome to my website!</p>
     </header>
