--- a/index.html
+++ b/index.html
@@ -4,17 +4,55 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport"  />
   <title>3D Website</title>
+  <style>
+    nav{
+      background-image: url("space.jpg");
+      margin-top: 0%;
+      margin-left: auto;
+      margin-right: auto;
+     }
+     body{
+      margin: 0%;
+      margin-top: 0%;
+      margin-left: 0%;
+      width: 100%;
+     }
+      nav ul{
+        color: white;
+        display: flex;
+        list-style: none;
+        align-items: center;
+        height: 80px;
+        width: 100%;
+        margin: 0%;
+    }
+    nav ul li{
+        padding: 0 12px;
+    }
+    
+    nav{
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+  </style>
 </head>
 
 <body>
 
-  <canvas id="bg"></canvas>
+  <nav>
+        <ul>
+            <li><b>Blog </b></li>
+            <li>About</li><br>
+            <li>Home</li>
+        </ul>
+  </nav>
+
 
   <main>
 
     <header>
+      
       <h1>Mohamed Ayaan</h1>
       <p>🚀 Welcome to my website!</p>
     </header>
@@ -120,3 +158,5 @@
 </body>
 
 </html>
+message.txt
+6 KB
